# PFMSRepo2024

./: GIT_HELP.md  README.md
2024a_a1_skeleton_(submission)/: Doxyfile  ackerman.h  controller.cpp  controller.h  index.dox  main.cpp  mission.cpp  mission.h
2024a_a1_skeleton_(submission)/test/: test_audi_reach_goals.cpp
2024a_a2_skeleton/: Doxyfile  ackerman.cpp  ackerman.h  controller.cpp  controller.h  index.dox  main.cpp  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h  tsp.cpp  tsp.h
2024a_a2_skeleton/test/: CMakeLists.txt  testTSPSearchAck.cpp  testTSPSearchQuad.cpp  test_audi_reach_goals.cpp  test_mission_reach_goals.cpp  tsp_reach_goals_quad.cpp
a3_skeleton/: index.dox  package.xml
a3_skeleton/data/firetruckDetection/: metadata.yaml
a3_skeleton/data/firetruckDetectionDriving/: metadata.yaml
a3_skeleton/data/firetruckDetectionFalse/: firetruckDetectionFalse_0.db3  metadata.yaml
a3_skeleton/data/goalWithinCones/: metadata.yaml
a3_skeleton/data/laserScanBagProj2/: metadata.yaml
a3_skeleton/log/: latest_list
a3_skeleton/src/: ackerman.cpp  laserprocessing.cpp  mission.cpp  mission.h
a3_skeleton/test/: goalInsideConesTest.cpp  goalInsideConesTestADV.cpp  obstacleDetectionTest.cpp
marking/a1/compilation/: C2.0_Test_Audi.txt  C2.1_Test_Husky.txt  C2.2_Test_Audi_Reach_Goals.txt  C2.3_Test_Husky_Reach_Goals.txt  C2.4_Test_Mission.txt
marking/a2/compilation/: C2.0_Test_Audi_Reach_Goals.txt  C2.1_Test_Quadcopter_Reach_Goals.txt  C2.2_Test_Mission_Reach_Goals.txt  C2.3_Test_TSP_Reach_Goals_Ackerman.txt  C2.4_Test_TSP_Reach_Goals_Quadcopter.txt
marking/a3/compilation/: COLCON_BUILD.txt
quizzes/quiz0/: README.md  TEST.txt
quizzes/quiz0/a1/: CMakeLists.txt  arrays.cpp  arrays.h  main.cpp
quizzes/quiz0/a2/: main.cpp  sample.cpp  sample.h
quizzes/quiz0/a2/marking/: CMakeLists.txt
quizzes/quiz0/a2/test/: utest.cpp
quizzes/quiz1/: README.md  TEST.txt
quizzes/quiz1/a1/: CMakeLists.txt  main.cpp  person.cpp  person.h  processing.cpp  processing.h
quizzes/quiz1/a1/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz1/a1/test/: CMakeLists.txt
quizzes/quiz1/a2/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h  shape.h
quizzes/quiz1/a2/marking/: CMakeLists.txt  utest.cpp
quizzes/quiz1/a2/test/: CMakeLists.txt
quizzes/quiz2/: README.md
quizzes/quiz2/a1/: CMakeLists.txt  analysis.cpp  main.cpp
quizzes/quiz2/a1/test/: utest.cpp
quizzes/quiz2/a2/: CMakeLists.txt  container_ops.cpp
quizzes/quiz3/: README.md  TEST.txt
quizzes/quiz3/a1/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp  tf2.cpp  tf2.h
quizzes/quiz3/a1/marking/: utest2.cpp
quizzes/quiz3/a1/test/: CMakeLists.txt  utest.cpp
quizzes/quiz3/a2/: CMakeLists.txt  analysis.cpp
quizzes/quiz3/a2/marking/: CMakeLists.txt
quizzes/quiz4/: README.md
quizzes/quiz4/a1/: controller.cpp  main.cpp  quadcopter.cpp
quizzes/quiz4/a1/test/: utest.cpp
quizzes/quiz4/a2/: CMakeLists.txt  package.xml
quizzes/quiz4/a2/src/: analysis.cpp  listener.cpp
quizzes/quiz4/a2/test/: CMakeLists.txt
quizzes/quiz5/: README.md  TEST.txt
quizzes/quiz5/a1/: CMakeLists.txt  package.xml
quizzes/quiz5/a1/install/: local_setup.sh  setup.sh
quizzes/quiz5/a1/log/: latest_build  latest_test
quizzes/quiz5/a1/rviz/: quiz5.rviz
quizzes/quiz5/a1/src/: detection_node.cpp  detection_node.h  laserprocessing.cpp  laserprocessing.h
quizzes/quiz5/a1/test/: utest.cpp
scratch/2024a_a1_skeleton/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  main.cpp  mission.cpp  mission.h  skidsteer.cpp  skidsteer.h
scratch/2024a_a1_skeleton/test/: test_audi.cpp  test_husky.cpp  test_husky_reach_goals.cpp  test_mission.cpp
scratch/2024a_a2_skeleton/: CMakeLists.txt  Doxyfile  ackerman.cpp  ackerman.h  controller.cpp  controller.h  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h  tsp.cpp  tsp.h
scratch/2024a_a2_skeleton/test/: CMakeLists.txt  testTSPSearch.cpp  test_helper.h  test_mission_reach_goals.cpp  test_quad_reach_goals.cpp  tsp_reach_goals_ack.cpp  tsp_reach_goals_quad.cpp
scratch/a1_skeleton/: CMakeLists.txt  ackerman.h  main.cpp  missioninterface.h  skidsteer.h
scratch/a1_skeleton/test/: CMakeLists.txt
scratch/a1_snippets/: CMakeLists.txt  command_ackerman.cpp  command_quadcopter.cpp  command_skidsteer.cpp
scratch/a3_skeleton/: CMakeLists.txt  Doxyfile  index.dox  package.xml
scratch/a3_skeleton/data/firetruckDetection/: firetruckDetection_0.db3
scratch/a3_skeleton/data/goalWithinCones/: goalWithinCones_0.db3
scratch/a3_skeleton/data/laserScanBagProj2/: laserScanBagProj2_0.db3
scratch/a3_skeleton/src/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  laserprocessing.cpp  laserprocessing.h  main.cpp  main_mission.cpp  mission.cpp  mission.h  sample.cpp  sample.h
scratch/a3_skeleton/test/: goalInsideConesTest.cpp  obstacleDetectionTest.cpp  utest.cpp
scratch/week00/: exercise02_textFile.txt
scratch/week00/week00/starter/: hello  hello.cpp
scratch/week01/starter/: aircon.cpp  arrays.cpp  enum_example.cpp  functions.cpp  pointers.cpp  sensor.h  structs.cpp  vectors.cpp
scratch/week02/starter/aircon/: aircon.cpp  aircon.h  main.cpp
scratch/week02/starter/circles/: circle.cpp  circle.h  circle_main.cpp
scratch/week03/starter/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
scratch/week04/starter/basic_control/: CMakeLists.txt  command_skidsteer.cpp  control_ackerman.cpp
scratch/week04/starter/shapes/: shape.h
scratch/week05/starter/graph_search/: graph_search.cpp
scratch/week11/: TUTORIAL.md
scratch/week12/a3_support/: package.xml
scratch/week12/a3_support/data/: ACKERMAN.TXT
scratch/week12/a3_support/src/: goals_publisher.cpp
skeleton/2024a_a1_skeleton/: CMakeLists.txt  controller.h
skeleton/2024a_a1_skeleton/test/: CMakeLists.txt
skeleton/2024a_a2_skeleton/test/: CMakeLists.txt
tutorials/week10/: README.md  TUTORIAL.md
tutorials/week12/: A3.md  README.md  TUTORIAL.md
tutorials/week12/a3_support/: CMakeLists.txt
tutorials/week12/a3_support/src/: goals_publisher.cpp
(+54 files in other folders)
