<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">

  <name>a3_support</name>
  <version>0.0.1</version>
  <description>support package for 41012 : A3 Individual Project Assignment</description>
  <maintainer email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</maintainer>
  <author email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</author>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
